# blazepose_openvino

./: CMakeLists.txt  LICENSE  README.md  blazepose.h  main.cpp
